--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 {
-  "updateInfo": "有新版本发布，修复bug",
-  "versions":"1.0.1,1.0.2",
+  "updateInfo": "优化体验，修复已知问题",
+  "versions":"1.0.0",
   "ext":""
 }
